--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "siddharth Anand",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.0",
     "mongoose": "^8.6.3",
     "validator": "^13.12.0"
